deployments/k8s/prod/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: post-service-prod
  labels:
    environment: production
