deployments/k8s/prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: post-service
  namespace: post-service-prod
  labels:
    app: post-service
    environment: production
spec:
  selector:
    app: post-service
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
  type: ClusterIP
